2001-12-20  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_set_serial): Changed to return an entire S-Exp
	and not just an octet string.
	* cms.c (ksba_cms_get_issuer_serial): Ditto.

2001-12-18  Werner Koch  <wk@gnupg.org>

	* Makefile.am (DISTCLEANFILES): Add asn1-tables.c

2001-12-17  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_serial): Does now return a S-expression.
	* cms.c (ksba_cms_get_issuer_serial): Ditto.

	* keyinfo.c: Changed all functions to return canonical encoded S-Exp.

	* Makefile.am (asn1-tables.c): Fixed rule to work with VPATH builds.

2001-12-14  Werner Koch  <wk@gnupg.org>

	* oid.c, time.c, cms.c : Moved atoi macros and digitp macro to ..
	* util.h: .. here.  Fixed digitp macro.  Added hexdigitp.

2001-12-13  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_issuer): Added an idx argument so that the
	function can be used to enumerate alternate names. 
	(ksba_cert_get_subject): Ditto.
	

 Copyright 2001 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.